fixed some spacing

--- a/bi-dashboard/src/styles/components/_numberWidget.scss
+++ b/bi-dashboard/src/styles/components/_numberWidget.scss
@@ -5,7 +5,7 @@
     box-shadow: $main-shadow;
     display: flex;
     justify-content: space-between;
-    width: 88%;
+    
     height: 200px;
     padding: 0 0 10px 0;
 }
